# snhai

./: .gitignore  CLAUDE.md  README.md  REPORT.md  config.json  fine_tune_llm_credit_rules.json  pyproject.toml
data/: data_card.json  test.jsonl  train.jsonl  val.jsonl
docs/analysis/: token_length_measurement.json
docs/srs/: README.md  data-preparation.md  evaluation.md  training.md
runs/evaluation/: baseline_eval_report.json  eval_report.json
scripts/: measure_token_lengths.py
src/snhai/: config.py  data_preparation.py  evaluation.py  training.py
tests/: test_config.py  test_data_preparation.py  test_evaluation.py  test_training.py
