[project]
name = "snhai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "transformers>=5.13.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snhai"]
